--- a/src/components/Discovery/EntryTable/entryTable.module.css
+++ b/src/components/Discovery/EntryTable/entryTable.module.css
@@ -102,8 +102,8 @@
 }
 
 .resTable .resTbody .fillerRow .resTd {
-    background-color: #f7f7f7;
-    color: #ccc;
+    background-color: var(--background-color-3);
+    color: var(--text-color-muted);
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
